Add Java-25-specific test-runtime detail to TC modernization sections