@@ -220,6 +220,11 @@ All role nodes use `DataDictionaryQualifierResolver` with pre-approval activatio
 - **AC-6**: drive `WorkflowDocument` approvals via test users at each node and assert `getRouteHeader().getDocRouteStatus()` transitions to `PROCESSED`/`FINAL`.
 
 ### 8.2 Modernization target (Java 25 LTS / Spring Boot 4 / JPA)
+- **Java 25 test-runtime specifics:**
+  - Toolchain: JUnit 5 (Jupiter) on JDK 25; Mockito 5.x with ByteBuddy ≥ 1.15 (class-file major version 69); Testcontainers ≥ 1.20; build on Gradle 9 / recent Maven compiler plugin with `--release 25`.
+  - Launch the test JVM with `--enable-native-access=ALL-UNNAMED` (plus any `--add-opens` still required by retained Rice/OJB code); the Security Manager is removed, so drop any `-Djava.security.manager` test config.
+  - Prefer virtual-thread executors for concurrent save/route steps; avoid `synchronized` around blocking calls to prevent carrier-thread pinning.
+  - Use records for fixtures and a `DocumentEvent` enum + pattern-matching `switch` to keep the Save-vs-Route chain selection declarative and unit-testable.
 - Model the chain as an ordered list of `Validation` beans keyed by a `DocumentEvent` enum (mirrors the DD `validationMap`), so the Save vs Route difference stays declarative and unit-testable.
 - Tests:
   - `@SpringBootTest` slice asserting `saveChain == [TotalsUnchangedValidation]`.
